--- a/9-nodeJS/9-express-Router-and-Controllers/package.json
+++ b/9-nodeJS/9-express-Router-and-Controllers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "6-express",
+  "name": "9-express-Router-and-Controllers",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
