--- a/9-nodeJS/8-reqparams-reqquery-reqbody/package.json
+++ b/9-nodeJS/8-reqparams-reqquery-reqbody/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "6-express",
+  "name": "8-reqparams-reqquery-reqbody",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
