--- a/10-contact-book/package.json
+++ b/10-contact-book/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "core-js": "^3.6.5",
@@ -24,7 +25,8 @@
     "helmet": "^4.1.1",
     "mongoose": "^5.10.6",
     "regenerator-runtime": "^0.13.7",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
